--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "React-kurs del 2",
   "main": "index.js",
   "scripts": {
-    "setup": "(cd 00-recap && npm install); (cd 01-use-effect && npm install); (cd 02-http && npm install); (cd 03-pokemon-project && npm install); (cd 00-recap/00-solution && npm install); (cd 03-pokemon-project/example-solution && npm install)"
+    "setup": "cd 00-recap && npm install && cd 00-solution && npm install && cd ../../01-use-effect && npm install && cd ../02-http && npm install && cd ../03-pokemon-project && npm install && cd example-solution && npm install"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://jorgensta@github.com/react-kurs/dag2.git"
+    "url": "https://github.com/react-kurs/dag2.git"
   },
   "author": "Jørgen H. Stamnes, Amund Tenstad, Joachim Eivindsen",
   "license": "ISC",
